--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,6 @@
       <h2>Guillaume Dumoulin</h2>
     </div>
   </div>
+  <script async src="https://analytics.umami.is/script.js" data-website-id="c627fbec-3cd1-4605-a169-1bed3f8178fd"></script>
 </body>
 </html>
