feat: add Vas-y Paulette website url

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header>
         <div class="header__left">
           <a href="">Guillaume Dumoulin</a>
-          <p>Actuellement lead développeur<br /> front-end chez Vas-y Paulette</p>
+          <p>Actuellement lead développeur<br /> front-end chez <a href="https://vasypaulette.com" target="_blank">Vas-y Paulette</a></p>
         </div>
 
         <ul class="social_links">
