feat: add favicon + add meta

--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@
   <title>Guillaume DUMOULIN - Lead front-end developer</title>
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   <link rel="stylesheet" href="style.css">
+
+  <meta name="description" content="Développeur front-end sur Chambéry.">
+  <meta name="keywords" content="développeur, front-end, chambéry, html, css, js, react, php">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <main>
     <div class="container">
       <header>
         <div class="header__left">
-          <a href="">Guillaume Dumoulin</a>
+          <a href="https://guillaumedumoulin.fr">Guillaume Dumoulin</a>
           <p>Actuellement lead développeur<br /> front-end chez <a href="https://vasypaulette.com" target="_blank">Vas-y Paulette</a></p>
         </div>
 
