fix: french / english

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Guillaume DUMOULIN - Lead front-end developer</title>
+  <title>Guillaume DUMOULIN - Lead développeur front-end</title>
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   <link rel="stylesheet" href="style.css">
 
@@ -32,7 +32,7 @@
         </ul>
       </header>
       <section class="main__content">
-        <h1>Lead Front-End developer</h1>
+        <h1>Lead développeur front-end</h1>
         <div class="profile_picture__container">
           <img src="./img/profile-picture.png" srcset="./img/profile-picture@2x.png 2x" alt="Photo de Guillaume Dumoulin">
         </div>
