--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <header>
         <div class="header__left">
           <a href="https://guillaumedumoulin.fr">Guillaume Dumoulin</a>
-          <p>Actuellement lead développeur<br /> front-end chez <a href="https://vasypaulette.com" target="_blank">Vas-y Paulette</a></p>
+          <p>Lead développeur<br /> créatif et front-end en freelance.</p>
         </div>
 
         <ul class="social_links">
