--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <header>
         <div class="header__left">
           <a href="https://guillaumedumoulin.fr">Guillaume Dumoulin</a>
-          <p>Lead développeur<br /> créatif et front-end en freelance.</p>
+          <p>Lead développeur freelance.</p>
         </div>
 
         <ul class="social_links">
@@ -32,7 +32,7 @@
         </ul>
       </header>
       <section class="main__content">
-        <h1>Lead développeur front-end</h1>
+        <h1>Lead développeur créatif</h1>
         <div class="profile_picture__container">
           <img src="./img/profile-picture.png" srcset="./img/profile-picture@2x.png 2x" alt="Photo de Guillaume Dumoulin">
         </div>
