--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <header>
         <div class="header__left">
           <a href="https://guillaumedumoulin.fr">Guillaume Dumoulin</a>
-          <p>Lead développeur freelance.</p>
+          <p>Lead développeur freelance</p>
         </div>
 
         <ul class="social_links">
