feat: add plausible

--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
       </footer>
     </div>
   </main>
-  <script async src="https://analytics.umami.is/script.js" data-website-id="c627fbec-3cd1-4605-a169-1bed3f8178fd"></script>
+  <script defer data-domain="plausible.leechy.fr" src="https://plausible.leechy.fr/js/script.js"></script>
 </body>
 </html>
