--- a/index.html
+++ b/index.html
@@ -48,6 +48,5 @@
       </footer>
     </div>
   </main>
-  <script defer data-domain="plausible.leechy.fr" src="https://plausible.leechy.fr/js/script.js"></script>
-</body>
+  <script defer data-domain="guillaumedumoulin.fr" src="https://plausible.leechy.fr/js/script.js"></script></body>
 </html>
